# GodotManager

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
public/assets/: list.css  list.css.map  list.scss  message.css  message.css.map  message.scss  style.css  style.css.map  style.scss
src/: main.rs
src/components/: message.rs  mod.rs  sidebar.rs  version.rs
