[package]
name = "godot_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
chrono = "0.4.31"
reqwest = "0.11.20"
octocrab = "0.30.1"
anyhow = "1.0.75"
