[package]
name = "godot_manager"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
chrono = "0.4.31"
reqwest = "0.11.22"
octocrab = "0.31.2"
anyhow = "1.0.75"
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"